--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pages-libs/cutie",
+  "name": "@page-libs/cutie",
   "version": "1.0.0",
   "description": "Page plugin for using cutie library in browser.",
   "main": "/out/index.js",
