--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@page-libs/cutie",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Page plugin for using cutie library in browser.",
   "main": "out/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test-executor",
     "build": "grunt"
   },
   "repository": {
@@ -27,5 +27,9 @@
     "grunt": "^1.0.3",
     "grunt-babel": "^8.0.0",
     "load-grunt-tasks": "^4.0.0"
+  },
+  "dependencies": {
+    "@cuties/cutie": "^1.4.4",
+    "test-executor": "^1.1.2"
   }
 }
