--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Page plugin for using cutie library in browser.",
   "main": "out/index.js",
   "scripts": {
-    "test": "node test-executor",
+    "test": "node test",
     "build": "node build"
   },
   "repository": {
@@ -23,22 +23,22 @@
   "homepage": "https://github.com/Guseyn/page-cutie#readme",
   "dependencies": {
     "@cuties/cutie": "^1.7.0",
-    "@cuties/fs": "^1.2.0",
-    "@cuties/json": "^1.1.0",
-    "@cuties/spawn": "^1.0.1",
-    "@cuties/wall": "^1.1.0",
+    "@cuties/fs": "^1.2.4",
+    "@cuties/json": "^1.1.1",
+    "@cuties/spawn": "^1.0.2",
+    "@cuties/wall": "^1.1.2",
     "test-executor": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
-    "grunt": "^1.0.3",
-    "grunt-babel": "^8.0.0",
-    "load-grunt-tasks": "^4.0.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "grunt": "^1.0.4",
+    "grunt-babel": "^8.0.0",
+    "load-grunt-tasks": "^4.0.0"
   }
 }
